<?xml version="1.0"?>
<package format="2">
  <name>ias_unitree_camera</name>
  <version>0.0.0</version>
  <description>The camera package for streaming cameras and pointcloud on ros</description>
  <maintainer email="rollo.f96@gmail.com">Federico Rollo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
</package>
